[package]
name = "cold-io"
version = "0.1.3"
edition = "2018"
authors = ["Vladislav Melnik <vladislav.melnik@protonmail.com>"]
license = "MIT"
description = "Event driven network io"
repository = "https://github.com/vlad9486/cold-io"

[dev-dependencies]
ctrlc = { version = "3.2" }
env_logger = { version = "0.9.0" }
log = { version = "0.4.14" }

[dependencies]
mio = { version = "0.7.13", features = ["os-poll", "tcp"] }
rand = { version = "0.8.4" }
smallvec = { version = "1.6" }
